labbat. wrong branch...

--- a/src/index.html
+++ b/src/index.html
@@ -20,5 +20,11 @@
   <script>window.__theme = 'bs4';</script>  
   
   <app-root></app-root>
+
+      <!-- jQuery -->
+    <!--<script src="assets/js/jquery.js"></script>-->
+
+    <!-- Bootstrap Core JavaScript -->
+    <!--<script src="assets/js/bootstrap.min.js"></script>-->
 </body>
 </html>
