--- a/src/index.html
+++ b/src/index.html
@@ -13,19 +13,9 @@
   <link rel="icon" type="image/x-icon" href="favicon.ico">
   <link href="assets/font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
   <link href="https://fonts.googleapis.com/css?family=Lato:300,400,700,300italic,400italic,700italic" rel="stylesheet" type="text/css">
+<link href="https://fonts.googleapis.com/css?family=Inconsolata:300,400,700,300italic,400italic,700italic" rel="stylesheet" type="text/css">
 
-    <!-- Temporary navbar container fix -->
-    <style>
-    .navbar-toggler {
-        z-index: 1;
-    }
-    
-    @media (max-width: 576px) {
-        nav > .container {
-            width: 100%;
-        }
-    }
-    </style>
+
 
 </head>
 <body id="page-top">
